add alembic for migrations and basic uncompleted readme

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Database Status</title>
-    <link rel="icon" type="image/svg" href="/static/favicon.svg">
+    <!--<link rel="icon" type="image/svg" href="/static/favicon-moon100x3_886799.svg">-->
     <link rel="stylesheet" href="/static/node_modules/@stackoverflow/stacks/dist/css/stacks.min.css">
     <link rel="stylesheet" href="/static/node_modules/@stackoverflow/stacks-icons/dist/icons.css">
 </head>
