cool bright design base

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,8 +7,9 @@
     <!--<link rel="icon" type="image/svg" href="/static/favicon-moon100x3_886799.svg">-->
     <link rel="stylesheet" href="/static/node_modules/@stackoverflow/stacks/dist/css/stacks.min.css">
     <link rel="stylesheet" href="/static/node_modules/@stackoverflow/stacks-icons/dist/icons.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
-<body class="theme-dark p12">
+<body class="theme-dark">
     {% include "_spinner.html" %}
 
     <!-- Use s-page container for proper padding -->
@@ -29,6 +30,7 @@
 
         const application = Application.start();
         application.register('loading', LoadingController);
+
     </script>
 </body>
 </html>
